# pocket-tts

./: Cargo.toml
bindings/go/: README.md  go.mod  pockettts.go
bindings/go/example/: main.go
candle/crates/pocket-tts-cli/src/commands/: generate.rs
candle/crates/pocket-tts/src/: tts_model.rs
candle/crates/pocket-tts/tests/: parity_tests.rs
crates/pocket-tts-ffi/: Cargo.toml
crates/pocket-tts-ffi/include/: pocket_tts.h
crates/pocket-tts-ffi/src/: lib.rs
crates/pocket-tts/src/: tts_model.rs
